test/lambda/negative/runtime/index_out_of_bounds.ls
// @expect-error: E303
// @description: Array index out of bounds

let arr = [1, 2, 3]
let x = arr[10]
